--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Varad Bhogayata | Software Developer</title>
+  <title>Tarun Mamidi | Doctoral Candidate at UAB</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -35,20 +35,20 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Varad Bhogayata | Software Developer" />
-  <meta property="og:description" content="Software Developer" />
-  <meta property="og:url" content="https://varadbhogayata.github.io/" />
-  <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
-  <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
-  <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
+  <meta property="og:title" content="Tarun Karthik Kumar Mamidi | Doctoral Candidate at UAB" />
+  <meta property="og:description" content="Doctoral Candidate at UAB" />
+  <meta property="og:url" content="https://tkmamidi.github.io/" />
+  <meta property="og:site_name" content="Tarun Karthik Kumar Mamidi | Doctoral Candidate at UAB" />
+  <meta property="article:publisher" content="https://tkmamidi.github.io/" />
+  <meta property="og:image" content="https://tkmamidi.github.io/examples/Tarun_Mamidi.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
+  <meta name="twitter:site" content="@tarunmamidi7" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
-  <meta name="author" content="Varad Bhogayata" />
-  <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
+  <meta name="twitter:description" content="Doctoral Candidate at UAB" />
+  <meta name="twitter:url" content="https://twitter.com/tarunmamidi7" />
+  <meta name="author" content="Tarun Karthik Kumar Mamidi" />
+  <meta name="description" content="Fourth-year doctoral candidate at UAB focused on applying computational biology and data science methods to the study of human disease." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
@@ -159,7 +159,7 @@
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
       <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Software Developer</span>
+        Bhogayata</a><span class="black-text">Doctoral Candidate at UAB</span>
     </div>
   </nav>
 
