--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <meta property="og:url" content="https://tkmamidi.github.io/" />
   <meta property="og:site_name" content="Tarun Karthik Kumar Mamidi | Doctoral Candidate at UAB" />
   <meta property="article:publisher" content="https://tkmamidi.github.io/" />
-  <meta property="og:image" content="https://tkmamidi.github.io/examples/Tarun_Mamidi.JPG" />
+  <meta property="og:image" content="https://tkmamidi.github.io/examples/Tarun_Mamidi.jpeg" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@tarunmamidi7" />
