--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <meta property="og:url" content="https://tkmamidi.github.io/" />
   <meta property="og:site_name" content="Tarun Karthik Kumar Mamidi | Doctoral Candidate at UAB" />
   <meta property="article:publisher" content="https://tkmamidi.github.io/" />
-  <meta property="og:image" content="https://tkmamidi.github.io/examples/Tarun_Mamidi.jpeg" />
+  <meta property="og:image" content="https://tkmamidi.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@tarunmamidi7" />
@@ -85,7 +85,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/passport-new.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="/assets/img/Tarun_Mamidi.jpeg" class="circle img-responsive profile-pic" alt="avatar">
         </a>
       </li>
 
@@ -158,8 +158,7 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Doctoral Candidate at UAB</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Tarun Karthik Kumar Mamidi</a><span class="black-text">Doctoral Candidate at UAB</span>
     </div>
   </nav>
 
@@ -209,10 +208,10 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Varad Bhogayata.</span></h2>
+              <h2>Hi, I'm <span class="teal">Tarun Karthik Kumar Mamidi.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
+              <h5>Fourth-year doctoral candidate at UAB focused on applying computational biology and data science methods to the study of human disease. I am driven to apply myself to helping to understanding the molecular basis of human diseases and passionate about a career where I can significantly contribute to science.</h5>
             </div>
             <div class="social">
               <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
