--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href="https://varadbhogayata.github.io/assets/resume/Varad_Bhogayata_Resume.pdf" target="_blank"
+        <a aria-label="Open Varad's resume in a new tab" href="https://varadbhogayata.github.io/assets/resume/Tarun_Mamidi.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -214,12 +214,12 @@
               <h5>Fourth-year doctoral candidate at UAB focused on applying computational biology and data science methods to the study of human disease. I am driven to apply myself to helping to understanding the molecular basis of human diseases and passionate about a career where I can significantly contribute to science.</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
+              <a href="https://www.linkedin.com/in/tkmamidi/" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
               </a>
-              <a href="https://github.com/varadbhogayata/" target="_blank">
+              <a href="https://github.com/tkmamidi/" target="_blank">
                 <button class="icon-btn github">
                   <i class="fa fa-github"></i>
                 </button>
@@ -259,11 +259,7 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am a Computer Science Grad Student at Arizona State University. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
-
-          I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 19 months of professional work experience which helped me strengthen my experience in Python, Flask, and Django.
-
-          I am passionate about developing complex applications that solve real-world problems impacting millions of users.
+          I am a Doctoral Candidate at the University of Alabama at Birmingham. I enjoy problem-solving and coding. 
         </p>
         <p>
           <ul>
@@ -315,28 +311,25 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
-                      class="teal-text hoverline">Zhiffy</a></span>
+                      class="teal-text hoverline">UAB</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Engineer</div>
+            <div class="role brown-text text-darken-2">PhD Researcher</div>
             <ul>
               <li>
-                Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
+                Analysis of molecular variation on a case by case basis to identify causal variants in patients with rare genetic diseases.
               </li>
               <li>
-                Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
-such as login/sign up, view a product, add a product to cart, checkout the order, etc.
+                Development of Machine Learning models to more efficiently and accurately diagnose patients with rare, undiagnosed, or misdiagnosed diseases.
               </li>
-              <li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>
-              <li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>
               <li>
                 <b>Tools:</b> Python, Flask, MongoDB
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2020 - Nov 2020 | Hyderabad, India</span>
+            <span>Aug 2019 - Present | Birmingham, Alabama</span>
           </div>
         </div>
 
@@ -352,33 +345,29 @@ such as login/sign up, view a product, add a product to cart, checkout the order
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="http://meditab.com" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
+                      class="teal-text hoverline">LSU-HSC</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Programmer Analyst</div>
+            <div class="role brown-text text-darken-2">Bioinformatics Analyst</div>
             <ul>
               <li>
-                Customized a tree-based optimization algorithm that separates drugs into distinct groups to maximize the concurrent execution of drug
-dispenser robots; improved an optimization algorithm that reduced the cycle-time of the automation process by 25%.
+                Development of pipelines for next generation sequencing Analysis.
               </li>
               <li>
-                Devised a customized recursion algorithm to extend the functionality of the current environment to a multi-robot and multi-system
-environment
+                Development of a shiny application “BIG-DE” for Differential Gene Expression Analysis. (https://tarunmamidi.shinyapps.io/lsuhsc_big_de/).
               </li>
               <li>
-                Built a modular video analytics app using Flask, OpenCV that tracks the location of each human in a multi-camera environment;
-utilized perspective transformation, object detection, and object tracking to find the location of a human.
+                Collaborative analysis to identify copy number variations in patient cohorts with prostate and lung cancers.
               </li>
-              <li>Increased the speed of the video analytics app by 20% by using a customized YOLOv3 algorithm to perform object detection and
-                DeepSORT algorithm for multi-object tracking.</li>
+              <li>●	Development of Machine Learning models to classify prostate cancer patients as Indolent and Aggressive by integrating mutation, methylation and transcriptome data.</li>
               <li>
                 <b>Tools:</b> Python, Flask, OpenCV, Keras, Tensorflow, PyTorch
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Dec 2018 - July 2019 | Ahmedabad, India</span>
+            <span>Oct 2017 - Jun 2019 | New Orleans, Louisiana</span>
           </div>
         </div>
 
@@ -394,19 +383,17 @@ utilized perspective transformation, object detection, and object tracking to fi
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="#experience" class="teal-text hoverline">Mtag
-                      Innovations</a></span>
+                  <span class="card-title"><a href="#experience" class="teal-text hoverline">Aurobindo Pharmaceuticals</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Developer</div>
+            <div class="role brown-text text-darken-2">Project Engineer Intern</div>
             <ul>
               <li>
-                Programmed a cloud-based web app using Flask and JavaScript aimed at storing, visualizing, and tracking temperature and humidity
-of each drug container to estimate the degradation of the drug.
+                Assisted senior personnel in quality check of the pharmaceutical drugs.
               </li>
               <li>
-                Created an alert system to send notifications and emails when the parameters exceed the threshold.
+                Part of the sterilization team ensuring that the production equipment were safe and sterile.
               </li>
               <li>
                 <b>Tools:</b> Python, Flask, JavaScript
@@ -414,7 +401,7 @@ of each drug container to estimate the degradation of the drug.
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
+            <span>Summer 2013 | Hyderabad, Telangana, India</span>
           </div>
         </div>
 
@@ -429,22 +416,17 @@ of each drug container to estimate the degradation of the drug.
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.cignex.com" target="_blank"
-                      class="teal-text hoverline">CIGNEX
-                      Datamatics </a></span>
+                      class="teal-text hoverline">Dr. Reddy's Laboratories </a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Project Trainee</div>
+            <div class="role brown-text text-darken-2">Project Engineer Intern</div>
             <ul>
               <li>
-                Designed a library management system for a local library, where we undertook activities like requirement
-                elicitation, preparing Data Flow
-                and Entity-Relationship diagrams.
+                Worked with quality assurance team and chromatography lab and generated detailed reports on proteins.
               </li>
               <li>
-                Delivered a solution for a POC involving Automatic Financial Document Classifier using Natural Language
-                Processing and Support Vector
-                Machines with 96% accuracy on the company’s data.
+                Worked on spectrograph of proteins and created user defined views and reports from various database.
               </li>
               <li>
                 <b>Tools:</b> Python, Scikit-learn, NLTK
@@ -452,7 +434,7 @@ of each drug container to estimate the degradation of the drug.
             </ul>
           </div>
           <div class="card-action">
-            <span>June 2017 - July 2017 | Ahmedabad, India</span>
+            <span>Summer 2012 | Hyderabad, Telangana, India</span>
           </div>
         </div>
 
