--- a/index.html
+++ b/index.html
@@ -898,13 +898,11 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">University of Alabama</a></span>
+                  <span class="card-title"><a href="https://sites.uab.edu/cgds/author/tmamidi/" target="_blank" class="teal-text hoverline">University of Alabama</a></span>
                 </p>
                 <p class="brown-text">Tempe, USA</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
-                  <br>
-                  <b>CGPA: </b>4.0/4.0
+                  <b>Degree: </b>Doctor of Philosophy      
                 </p>
 
                 <ul>
@@ -927,14 +925,44 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
+                  <span class="card-title"><a href="https://www.iupui.edu/" target="_blank" class="teal-text hoverline">Indiana University Purdue University Indianapolis, Indiana, USA</a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Indiana, USA</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b>Master of Science, Bioinformatics
                   <br>
-                  <b>CGPA: </b>3.13/4.33
+                  <b>CGPA: </b>3.6/4.0
+                </p>
+
+                <ul>
+                  <p>
+                    <b>Relevant Courseworks:</b>
+                  <ul>
+                    <li>Data Structures and Algorithms</li>
+                    <li>Database Management Systems</li>
+                    <li>Operating Systems</li>
+                    <li>Machine Learning</li>
+                    <li>Computer Vision</li>
+                  </ul>
+                  </p>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          </div>
+          <div class="col s12 m6 l6">
+            <div class="card">
+              <div class="card-content">
+                <p>
+                  <span class="card-title"><a href="http://www.griet.ac.in/" target="_blank" class="teal-text hoverline">Gokaraju Rangaraju Institute of Engg. And Technology (JNTU), Telangana, INDIA</a></span>
+                </p>
+                <p class="brown-text">Indiana, USA</p>
+                <p>
+                  <b>Degree: </b>Bachelor of Technology, Biotechnology
+                  <br>
+                  <b>CGPA: </b>75%
                 </p>
 
                 <ul>
